--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.3.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-animejs": "^0.5.6",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
