--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "carbon-components-react": "^7.53.0",
     "carbon-icons": "^7.0.7",
     "d3": "^7.3.0",
+    "d3-sankey": "^0.12.3",
     "gsap": "^3.9.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
