--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animejs": "^0.5.6",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
