Update Cards in history, every time user select a card in category column is added to history list. Added Search with text to inputText in the searcher, every time user write a letter ask for matches to ElasticSearch

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "url-change-event": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
